uneta godisnja doba

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-<h1>Introduction to Front-end development</h1>
-<p>A front-end developer architects and develops websites and applications using web technologies:</p>
+<h1>Godisnja doba</h1>
+<p>u godisnja doba spadaju::</p>
 <ul>
-    <li style="color: aliceblue;">HTML,</li>
-    <li style="color: blueviolet;">CSS,</li>
-    <li style="color: brown
-    ;">JavaScript</li>
+    <li style="color: rgb(215, 91, 105);">prolece</li>
+    <li style="color: rgb(221, 221, 61);">leto</li>
+    <li style="color: rgb(190, 83, 83);">jesen</li>
+    <li style="color: aquamarine;">zima</li>
+
 </ul>
